// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Renderes CloseButton unchanged? 1`] = `
<div>
  <button
    class="flex justify-center items-center absolute top-3 left-5 w-7 h-7 mt-1 rounded-full text-base text-red-600 border border-red-600 shadow-[0_0_0.25rem_1px_inset] shadow-red-500"
    data-testid="close-button"
    type="button"
  >
    <svg
      class="w-5 h-5"
      data-testid="close-button-svg"
      fill="none"
      stroke="currentColor"
      stroke-width="3"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</div>
`;

exports[`Snapshot Testing Renderes ConfirmButton unchanged? 1`] = `
<div>
  <button
    class="flex justify-center items-center self-center gap-1 max-w-fit px-3 outline-none rounded-lg cursor-not-allowed text-black bg-slate-500 opacity-50"
    data-testid="confirm-button"
    disabled=""
    type="submit"
  >
    <svg
      class="w-6 h-6"
      data-testid="confirm-button-svg"
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <span
      class="mt-2"
      data-testid="confirm-button-span"
    >
      تایید
    </span>
  </button>
</div>
`;
